WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
99879
Fix some baseline flexbox alignment
https://bugs.webkit.org/show_bug.cgi?id=99879
Summary
Fix some baseline flexbox alignment
Tony Chang
Reported
2012-10-19 15:13:14 PDT
Fix some baseline flexbox alignment
Attachments
Patch
(41.76 KB, patch)
2012-10-19 15:27 PDT
,
Tony Chang
ojan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tony Chang
Comment 1
2012-10-19 15:27:46 PDT
Created
attachment 169710
[details]
Patch
Tony Chang
Comment 2
2012-10-22 10:45:35 PDT
Committed
r132104
: <
http://trac.webkit.org/changeset/132104
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug