Source/WebCore/rendering/RenderFlexibleBox.h
@@ -51,6 +51,7 @@ public:
 
     virtual LayoutUnit baselinePosition(FontBaseline, bool firstLine, LineDirectionMode, LinePositionMode = PositionOnContainingLine) const OVERRIDE;
     virtual LayoutUnit firstLineBoxBaseline() const OVERRIDE;
+    virtual LayoutUnit inlineBlockBaseline(LineDirectionMode) const OVERRIDE;
 
     virtual void paintChildren(PaintInfo& forSelf, const LayoutPoint&, PaintInfo& forChild, bool usePrintRect) OVERRIDE;
 
